# bnf_parser_generator

./: .gitignore  .gitlab-ci.yml  .gn  BUILD.gn  BUILDCONFIG.gn  README.md  build.sh  build_all.sh  build_args.gn  build_dev.sh  quick.sh
.github/workflows/: ci.yml
examples/: bnf_engine_demo.cpp  clojure_example.cpp  json_example.cpp  new_engine_test.cpp  prolog_example.cpp  simple_demo.cpp  test.clj  test.json  test.pl  test_agreement.txt  test_indentation.py  test_yaml_anchors.yaml
grammars/: agreement.bnf  clojure.bnf  indentation.bnf  json.bnf  prolog.bnf  yaml_anchors.bnf
include/: bnf_ast.hpp  bnf_engine.hpp  bnf_parser.hpp  code_generator.hpp  cpp_backend.hpp  grammar_tokenizer.hpp  utf8_utils.hpp  version.hpp
scripts/: auto-release.sh  generate_version.sh  test-ci.sh
src/: bnf_ast.cpp  bnf_factory.cpp  bnf_lexer.cpp  bnf_parser.cpp  bnf_parser_gen_cli.cpp  code_generator.cpp  cpp_backend.cpp  engine.cpp  grammar_tokenizer.cpp  parser.cpp  parser_interface.cpp  utf8_utils.cpp  utils.cpp
tests/: basic_test.cpp  extended_bnf_test.cpp  generator_test.cpp  utf8_test.cpp
toolchain/: BUILD.gn
