# BNF Parser 2.0 - Полная поддержка классических BNF/EBNF правил

config("bnf_parser_config") {
  include_dirs = [ "include" ]
  cflags_cc = [
    "-std=c++17",
    "-Wall",
    "-Wextra",
    "-Wpedantic",
  ]
}

# Основная библиотека BNF Parser 2.0
static_library("bnf_parser") {
  sources = [
    # Новая архитектура
    "src/engine.cpp",
    "src/bnf_lexer.cpp",
    "src/bnf_parser.cpp", 
    "src/bnf_factory.cpp",
    "src/grammar_tokenizer.cpp",
    "src/parser.cpp",
    "src/utils.cpp",
    
    # Заголовочные файлы
    "include/bnf_parser.hpp",
    "include/bnf_ast.hpp",
    "include/bnf_parser.hpp",
    "include/grammar_tokenizer.hpp",
  ]
  
  public_configs = [ ":bnf_parser_config" ]
  
  # Копируем грамматики в выходную директорию
  data = [
    "grammars/prolog.bnf",
    "grammars/clojure.bnf", 
    "grammars/json.bnf",
  ]
}

# Простая демонстрация концепции (без зависимостей)
executable("simple_demo") {
  sources = [ "examples/simple_demo.cpp" ]
}

# Отладочный тест парсера
executable("debug_parser") {
  sources = [ "debug_parser.cpp" ]
  deps = [ ":bnf_parser" ]
  include_dirs = [ "include" ]
}

# Отладочный тест лексера
executable("debug_lexer") {
  sources = [ "debug_lexer.cpp" ]
  deps = [ ":bnf_parser" ]
  include_dirs = [ "include" ]
}

# Отладочный тест токенизатора
executable("debug_tokenizer") {
  sources = [ "debug_tokenizer.cpp" ]
  deps = [ ":bnf_parser" ]
  include_dirs = [ "include" ]
}

# Отладочный тест Prolog
executable("debug_prolog") {
  sources = [ "debug_prolog.cpp" ]
  deps = [ ":bnf_parser" ]
  include_dirs = [ "include" ]
}

# Полная демонстрация движка (требует исправления ошибок компиляции)
# executable("bnf_engine_demo") {
#   sources = [ "examples/bnf_engine_demo.cpp" ]
#   deps = [ ":bnf_parser" ]
# }

# Тесты (если включены)
if (bnf_parser_enable_tests) {
  executable("basic_test") {
    testonly = true
    sources = [ "tests/basic_test.cpp" ]
    deps = [ ":bnf_parser" ]
  }
}

# Примеры (если включены)
if (bnf_parser_enable_examples) {
  # Пока только демонстрационный пример
}

# Группы для удобства
group("tests") {
  testonly = true
  deps = []
  if (bnf_parser_enable_tests) {
    deps += [ ":basic_test" ]
  }
}

group("examples") {
  deps = [ 
    ":simple_demo",
    ":debug_parser",
    ":debug_lexer",
    ":debug_tokenizer"
  ]
}

group("all") {
  deps = [
    ":bnf_parser",
    ":examples",
  ]
}

group("all_with_tests") {
  testonly = true
  deps = [
    ":bnf_parser",
    ":tests",
    ":examples",
  ]
}
