# BNF Parser - Полная поддержка классических BNF/EBNF правил
# Версия определяется автоматически из git тегов

# Генерация заголовочного файла с версией из git тегов
action("generate_version") {
  script = "//build/run_shell_script.py"
  
  sources = [ "scripts/generate_version.sh" ]
  outputs = [ "$target_gen_dir/version.hpp" ]
  
  # Аргументы: путь к shell скрипту и путь к выходному файлу
  args = [
    rebase_path("scripts/generate_version.sh", root_build_dir),
    rebase_path("include/version.hpp", root_build_dir),
  ]
  
  # Перегенерировать при каждой сборке, если теги изменились
  # GN не может отслеживать git теги напрямую, поэтому используем .git/refs
  inputs = [ ".git/HEAD" ]
}

config("bnf_parser_config") {
  include_dirs = [ "include" ]
  cflags_cc = [
    "-std=c++17",
    "-Wall",
    "-Wextra",
    "-Wpedantic",
    "-fPIC",  # Position Independent Code для shared libraries
  ]
}

# Основная библиотека BNF Parser
if (bnf_parser_library_type == "shared") {
  shared_library("bnf_parser") {
    sources = [
      # Основная функциональность
      "src/bnf_parser.cpp", 
      "src/bnf_lexer.cpp",
      "src/bnf_factory.cpp",
      "src/grammar_tokenizer.cpp",
      "src/parser.cpp",
      "src/utils.cpp",
    ]
    
    # Генерируем версию перед сборкой
    deps = [ ":generate_version" ]
    
    public_configs = [ ":bnf_parser_config" ]
    
    # Копируем грамматики в выходную директорию
    data = [
      "grammars/prolog.bnf",
      "grammars/json.bnf",
      "grammars/clojure.bnf",
    ]
  }
} else {
  static_library("bnf_parser") {
    sources = [
      # Основная функциональность
      "src/bnf_parser.cpp", 
      "src/bnf_lexer.cpp",
      "src/bnf_factory.cpp",
      "src/grammar_tokenizer.cpp",
      "src/parser.cpp",
      "src/utils.cpp",
    ]
    
    # Генерируем версию перед сборкой
    deps = [ ":generate_version" ]
    
    public_configs = [ ":bnf_parser_config" ]
    
    # Копируем грамматики в выходную директорию
    data = [
      "grammars/prolog.bnf",
      "grammars/json.bnf",
      "grammars/clojure.bnf",
    ]
  }
}

# Простая демонстрация концепции (без зависимостей)
executable("simple_demo") {
  sources = [ "examples/simple_demo.cpp" ]
}

# Тесты (если включены)
if (bnf_parser_enable_tests) {
  executable("basic_test") {
    testonly = true
    sources = [ "tests/basic_test.cpp" ]
    deps = [ ":bnf_parser" ]
  }
}

# Примеры (если включены)
if (bnf_parser_enable_examples) {
  # Пока только демонстрационный пример
}

# Группы для удобства
group("tests") {
  testonly = true
  deps = []
  if (bnf_parser_enable_tests) {
    deps += [ ":basic_test" ]
  }
}

group("examples") {
  deps = [ 
    ":simple_demo"
  ]
}

group("all") {
  deps = [
    ":bnf_parser",
    ":examples",
  ]
}

group("all_with_tests") {
  testonly = true
  deps = [
    ":bnf_parser",
    ":tests",
    ":examples",
  ]
}
