# BNF Parser Generator - Генератор standalone парсеров из BNF/EBNF грамматик
# Версия определяется автоматически из git тегов

# Генерация заголовочного файла с версией из git тегов
action("generate_version") {
  script = "//build/run_shell_script.py"
  
  sources = [ "scripts/generate_version.sh" ]
  outputs = [ "$target_gen_dir/version.hpp" ]
  
  # Аргументы: путь к shell скрипту и путь к выходному файлу
  args = [
    rebase_path("scripts/generate_version.sh", root_build_dir),
    rebase_path("include/version.hpp", root_build_dir),
  ]
  
  # Перегенерировать при каждой сборке, если теги изменились
  # GN не может отслеживать git теги напрямую, поэтому используем .git/refs
  inputs = [ ".git/HEAD" ]
}

config("bnf_parser_generator_config") {
  include_dirs = [ "include" ]
  cflags_cc = [
    "-std=c++20",
    "-Wall",
    "-Wextra",
    "-Wpedantic",
    "-fPIC",  # Position Independent Code для shared libraries
  ]
}

# Основная библиотека BNF Parser Generator
if (bnf_parser_generator_library_type == "shared") {
  shared_library("bnf_parser_generator") {
    sources = [
      # Парсинг BNF грамматик
      "src/bnf_parser.cpp", 
      "src/bnf_lexer.cpp",
      "src/bnf_factory.cpp",
      "src/bnf_ast.cpp",
      "src/utf8_utils.cpp",
      
      # Генератор кода
      "src/code_generator.cpp",
      "src/cpp_backend.cpp",
    ]
    
    # Генерируем версию перед сборкой
    deps = [ ":generate_version" ]
    
    public_configs = [ ":bnf_parser_generator_config" ]
    
    # Копируем грамматики в выходную директорию
    data = [
      "grammars/prolog.bnf",
      "grammars/json.bnf",
      "grammars/clojure.bnf",
    ]
  }
} else {
  static_library("bnf_parser_generator") {
    sources = [
      # Парсинг BNF грамматик
      "src/bnf_parser.cpp", 
      "src/bnf_lexer.cpp",
      "src/bnf_factory.cpp",
      "src/bnf_ast.cpp",
      "src/utf8_utils.cpp",
      
      # Генератор кода
      "src/code_generator.cpp",
      "src/cpp_backend.cpp",
    ]
    
    # Генерируем версию перед сборкой
    deps = [ ":generate_version" ]
    
    public_configs = [ ":bnf_parser_generator_config" ]
    
    # Копируем грамматики в выходную директорию
    data = [
      "grammars/prolog.bnf",
      "grammars/json.bnf",
      "grammars/clojure.bnf",
      "grammars/agreement.bnf",
      "grammars/indentation.bnf",
      "grammars/yaml_anchors.bnf",
    ]
  }
}

# CLI инструмент для генерации парсеров
executable("bnf-parser-gen") {
  sources = [ "src/bnf_parser_gen_cli.cpp" ]
  deps = [ ":bnf_parser_generator" ]
}

# Тесты (если включены)
if (bnf_parser_generator_enable_tests) {
  executable("basic_test") {
    testonly = true
    sources = [ "tests/basic_test.cpp" ]
    deps = [ ":bnf_parser_generator" ]
  }
  
  executable("utf8_test") {
    testonly = true
    sources = [ "tests/utf8_test.cpp" ]
    deps = [ ":bnf_parser_generator" ]
  }
  
  executable("generator_test") {
    testonly = true
    sources = [ "tests/generator_test.cpp" ]
    deps = [ ":bnf_parser_generator" ]
  }
  
  executable("extended_bnf_test") {
    testonly = true
    sources = [ "tests/extended_bnf_test.cpp" ]
    deps = [ ":bnf_parser_generator" ]
  }
}

# Примеры (если включены)
if (bnf_parser_generator_enable_examples) {
  # Пока только демонстрационный пример
}

# Группы для удобства
group("tests") {
  testonly = true
  deps = []
  if (bnf_parser_generator_enable_tests) {
    deps += [ 
      ":basic_test",
      ":utf8_test",
      ":generator_test",
      ":extended_bnf_test",
    ]
  }
}

group("examples") {
  deps = []
}

group("all") {
  deps = [
    ":bnf_parser_generator",
    ":bnf-parser-gen",
    ":examples",
  ]
}

group("all_with_tests") {
  testonly = true
  deps = [
    ":bnf_parser_generator",
    ":bnf-parser-gen",
    ":tests",
    ":examples",
  ]
}
